--- a/.github/workflows/xiaomi_redmi-router-ax6000.yml
+++ b/.github/workflows/xiaomi_redmi-router-ax6000.yml
@@ -4,7 +4,7 @@
 #   Author: Hyy2001X                                      #
 ###########################################################
 
-name: Redmi AX6S
+name: Xiaomi_Redmi_AX6000
 
 ### 界面控制部分 ( 以下内容请保持不变 )
 on:
@@ -12,7 +12,7 @@ on:
   workflow_dispatch:
     inputs:
       Tempoary_IP:
-        description: '固件 IP 地址 [可选]'
+        description: '192.168.3.10'
         default: ''
       Tempoary_CONFIG:
         description: '配置文件 [可选]'
