--- a/.github/workflows/xiaomi_redmi-router-ax6000.yml
+++ b/.github/workflows/xiaomi_redmi-router-ax6000.yml
@@ -163,6 +163,15 @@ jobs:
         cd openwrt
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        
+        rm -rf feeds/packages/net/xray-core
+        rm -rf feeds/luci/applications/luci-app-passwall
+        rm -rf feeds/packages/lang/golang
+        sed -i "/passwall/d" "feeds.conf.default"
+        echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git" >> "feeds.conf.default"
+        ./scripts/feeds update passwall
+        ./scripts/feeds install -a -f -p passwall
+        svn co https://github.com/openwrt/packages/trunk/lang/golang feeds/packages/lang/golang
 
     - name: Accelerate
       if: env.CACHE_ACCELERATE == 'true'
