--- a/.github/workflows/xiaomi_redmi-router-ax6000.yml
+++ b/.github/workflows/xiaomi_redmi-router-ax6000.yml
@@ -167,7 +167,7 @@ jobs:
         rm -rf feeds/packages/net/xray-core
         rm -rf feeds/luci/applications/luci-app-passwall
         rm -rf feeds/packages/lang/golang
-        svn co https://github.com/openwrt/packages/lang/golang feeds/packages/lang/golang
+        git clone https://github.com/sbwml/packages_lang_golang -b 22.x feeds/packages/lang/golang
         sed -i "/passwall/d" "feeds.conf.default"
         echo "src-git passwall https://github.com/xiaorouji/openwrt-passwall.git" >> "feeds.conf.default"
         ./scripts/feeds update passwall
